<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>demo</name>
	<version>0.0.1</version>
	<description>A demo app for the blog</description>
	<maintainer email="nope@notgoogle.com">Amar Lakshya</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<build_depend>qtbase5-dev</build_depend>
	<build_depend>qt5-qmake</build_depend>

	<exec_depend>libqt5-core</exec_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
